Codecov support in CI (#2)
* Code coverage setup

* More tests

* Fix travis crash on tox install

* Trying again

* Maybe tox-travis works?

* Ok, so it's language not ranguage

* Now I can't use --user in pip install

* Add coverage badge

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: python
-python:
-- '2.7'
-- '3.6'
-- '3.7'
-script: python -m unittest discover
+matrix:
+  include:
+    - python: "2.7"
+      env: TOXENV=py27
+    - python: "3.6"
+      env: TOXENV=py36
+    - python: "3.7"
+      env: TOXENV=py37
+install: pip install tox
+script: tox
 deploy:
   provider: pypi
   user: henrywconklin
